src/test/ui/feature-gates/feature-gate-unboxed-closures-manual-impls.stderr
error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:11:12
   |
LL |     extern "rust-call" fn call(self, args: ()) -> () {}
   |            ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:17:12
   |
LL |     extern "rust-call" fn call_once(self, args: ()) -> () {}
   |            ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:23:12
   |
LL |     extern "rust-call" fn call_mut(&self, args: ()) -> () {}
   |            ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:29:12
   |
LL |     extern "rust-call" fn call_once(&self, args: ()) -> () {}
   |            ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: the precise format of `Fn`-family traits' type parameters is subject to change
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:9:6
   |
LL | impl Fn<()> for Foo {
   |      ^^^^^^ help: use parenthetical notation instead: `Fn() -> ()`
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0229]: associated type bindings are not allowed here
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:15:6
   |
LL | impl FnOnce() for Foo1 {
   |      ^^^^^^^^ associated type not allowed here

error[E0658]: the precise format of `Fn`-family traits' type parameters is subject to change
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:21:6
   |
LL | impl FnMut<()> for Bar {
   |      ^^^^^^^^^ help: use parenthetical notation instead: `FnMut() -> ()`
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: the precise format of `Fn`-family traits' type parameters is subject to change
  --> $DIR/feature-gate-unboxed-closures-manual-impls.rs:27:6
   |
LL | impl FnOnce<()> for Baz {
   |      ^^^^^^^^^^ help: use parenthetical notation instead: `FnOnce() -> ()`
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0229, E0658.
For more information about an error, try `rustc --explain E0229`.
